--- a/style.css
+++ b/style.css
@@ -968,7 +968,7 @@ nav ul li::before {
     }
 
     /* No-Show Non-Printing Info */
-    nav, .headshot-about, .resume-link, header, .video-container {
+    nav, .headshot-about, .resume-link, .video-container {
         display: none;
     }
 
@@ -984,7 +984,7 @@ nav ul li::before {
     h1 {
         font-family: 'Roboto Slab', Georgia, 'Times New Roman', serif;
         color: #000000;
-        font-size: 24pt;
+        font-size: 20pt;
         font-weight: 600;
         margin: 0 0 12pt 0;
         text-align: left;
