--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ blockquote::after {
 
 footer {
     background: var(--footer-bg);
-    background-image: url('./content/footer_bg.png'); /* footer bkgd image - assignment requirement */
+    background-image: url('./content/footer_bg_v2.png'); /* footer bkgd image - assignment requirement */
     background-repeat: repeat;
     background-size: 20px 20px;
     color: var(--footer-text);
