--- a/style.css
+++ b/style.css
@@ -52,10 +52,10 @@ html, body {
     --nav-links: var(--sapphire-blue);
     --body-links: var(--sapphire-blue);
     --buttons: var(--pure-white);
-    ---bg: var(--dark-slate);
-    ---text: var(--pure-white);
-    ---links: var(--pure-white);
-    ---link-hover: var(--vibrant-orange);
+    --footer-bg: var(--dark-slate);
+    --footer-text: var(--pure-white);
+    --footer-links: var(--pure-white);
+    --footer-link-hover: var(--vibrant-orange);
 
 }
 
@@ -328,7 +328,7 @@ blockquote::after {
 
 footer {
     background: var(--footer-bg);
-    background-image: url('background-image: url('content/footer_bg_v2.png'); /* footer bkgd image - assignment requirement */
+    background-image: url('content/footer_bg_v2.png'); /* footer bkgd image - assignment requirement */
     background-repeat: repeat;
     background-size: 40px 40px;
     color: var(--footer-text);
