--- a/style.css
+++ b/style.css
@@ -339,6 +339,21 @@ footer {
     padding: 20px 20px 0 20px;
     text-align: left;
     margin-top: 3rem;
+    position: relative;
+}
+
+footer::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('content/footer_bg_v2.png');
+    background-repeat: repeat;
+    background-size: 20px 20px;
+    pointer-events: none;
+    z-index: 0;
 
  /* Still EXTRA, but less hard than when I needed to figure it out for the nav box! */
 
@@ -350,6 +365,7 @@ footer {
     width: 100vw;
 
 }
+
 
 /* Footer [Inside Container] */
 
@@ -613,6 +629,7 @@ nav ul li::before {
         font-size: .9rem;
         text-align: center;
         padding: 1.5rem 1rem !important;
+        position: relative;
     } 
     
     .footer-icon.email {
